[gd_scene load_steps=11 format=3 uid="uid://bemfq08b1nvyf"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_xl005"]
[ext_resource type="Script" path="res://scripts/player/player_inventory.gd" id="2_np1d3"]
[ext_resource type="Texture2D" uid="uid://b5gbd5imo2c5u" path="res://sprites/kenney/1bitpack/colored-transparent.png" id="2_uqxap"]
[ext_resource type="Script" path="res://scripts/player/player_input.gd" id="3_jn8xi"]
[ext_resource type="Script" path="res://scripts/player/player_attack.gd" id="4_lqpc8"]
[ext_resource type="Script" path="res://scripts/actors/knockback.gd" id="5_nj31u"]
[ext_resource type="Script" path="res://scripts/player/player_interact.gd" id="6_p2ral"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ggi6e"]
radius = 18.0278

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ylv6"]
size = Vector2(12, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_kq2ty"]
radius = 18.0

[node name="CharacterBody2D" type="CharacterBody2D" node_paths=PackedStringArray("player_attack", "knockback", "inventory")]
texture_filter = 1
motion_mode = 1
script = ExtResource("1_xl005")
player_attack = NodePath("PlayerAttack")
knockback = NodePath("Node/Knockback")
inventory = NodePath("Node/Inventory")

[node name="PlayerAttack" type="Node2D" parent="." node_paths=PackedStringArray("attack_sprite", "attack_collision")]
script = ExtResource("4_lqpc8")
attack_sprite = NodePath("../Attack")
attack_collision = NodePath("../Attack/Area2D")

[node name="Interaction" type="Area2D" parent="." node_paths=PackedStringArray("input", "inventory")]
visible = false
script = ExtResource("6_p2ral")
input = NodePath("../Node/PlayerInput")
inventory = NodePath("../Node/Inventory")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction"]
shape = SubResource("CircleShape2D_ggi6e")

[node name="Node" type="Node" parent="."]

[node name="Inventory" type="Node" parent="Node"]
script = ExtResource("2_np1d3")

[node name="Knockback" type="Node2D" parent="Node"]
script = ExtResource("5_nj31u")

[node name="PlayerInput" type="Node2D" parent="Node"]
script = ExtResource("3_jn8xi")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.631373, 1, 0.647059, 1)
texture_filter = 1
texture = ExtResource("2_uqxap")
region_enabled = true
region_rect = Rect2(459, 17, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4ylv6")

[node name="Attack" type="Sprite2D" parent="."]
texture = ExtResource("2_uqxap")
region_enabled = true
region_rect = Rect2(425, 187, 16, 16)

[node name="Area2D" type="Area2D" parent="Attack"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack/Area2D"]
shape = SubResource("CircleShape2D_kq2ty")

[connection signal="left_mouse_pressed" from="Node/PlayerInput" to="PlayerAttack" method="on_click_handler"]
[connection signal="movement_input" from="Node/PlayerInput" to="." method="_set_input_direction"]
